fix(Sidebar): Fix sidebar glitches on mobile & desktop

--- a/assets/styles/base.less
+++ b/assets/styles/base.less
@@ -216,6 +216,7 @@ button {
 .select.is-primary:not(:hover)::after,
 .select:not(.is-multiple):not(.is-loading):hover::after  {
   border-color: @bright-text;
+  z-index: @base-z-index;
 }
 
 .select.is-primary:hover::after,
